syntax = "proto3";

package com.example.domain;

message UserState {
  string first_name = 1;
  string last_name = 2;
}
