// This is the public API offered by your entity.
syntax = "proto3";

import "google/protobuf/empty.proto";
import "kalix/annotations.proto";

package com.example;

message CreateUser {
  string user_id = 1 [(kalix.field).entity_key = true];
  string first_name = 2;
  string last_name = 3;
}

service UserService {
  option (kalix.codegen) = {
    value_entity: {
      name: "com.example.domain.User"
      entity_type: "users"
      state: "com.example.domain.UserState"
    }
  };

  rpc Create(CreateUser) returns (google.protobuf.Empty);

}
